Rename application to PomodoroTracker